Fixing films squashing on iOS

--- a/sass/universal.scss
+++ b/sass/universal.scss
@@ -418,7 +418,7 @@ select {
   font-weight: bold;
   border-radius: 0;
   // Prevents button looking weird on IOS
-  -webkit-appearance: none;
+  // -webkit-appearance: none;
 }
 
 //********** Honeypot **********
